--- a/package.json
+++ b/package.json
@@ -5,14 +5,9 @@
   "main": "main.js",
   "dependencies": {
     "@electron/remote": "^2.0.8",
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "geng-editor": "^1.0.9",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "electron-is-dev": "^2.0.0",
+    "electron-store": "^8.0.2",
+    "geng-editor": "^1.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -20,7 +15,11 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "ele": "electron .",
-    "dev": "concurrently \"cross-env BROWSER=none npm run start\" \"wait-on http://localhost:3000 && npm run ele\""
+    "dev": "concurrently \"cross-env BROWSER=none npm run start\" \"wait-on http://localhost:3000 && npm run ele\"",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder",
+    "prepack": "npm run build",
+    "predist": "rm -rf build dist && npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -44,7 +43,72 @@
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
     "electron": "^17.2.0",
-    "electron-is-dev": "^2.0.0",
-    "wait-on": "^6.0.1"
+    "electron-builder": "^23.1.0",
+    "wait-on": "^6.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "5.0.0",
+    "web-vitals": "^2.1.4",
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0"
+  },
+  "author": "clydee",
+  "homepage": "./",
+  "build": {
+    "appId": "geng-editor-electron",
+    "productName": "geng-editor-electron",
+    "copyright": "Copyright © 2022 ${author}",
+    "extends": null,
+    "files": [
+      "build/**/*",
+      "node_modules/**/*",
+      "src/htmlStr.html",
+      "main.js",
+      "menuTemplate.js",
+      "package.json"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    },
+    "mac": {
+      "category": "public.app-category.productivity",
+      "artifactName": "${productName}-${version}-${arch}.${ext}"
+    },
+    "dmg": {
+      "background": "assets/logo.png",
+      "icon": "assets/icon.png",
+      "iconSize": 100,
+      "contents": [
+        {
+          "x": 380,
+          "y": 280,
+          "type": "link",
+          "path": "/Applications"
+        },
+        {
+          "x": 110,
+          "y": 280,
+          "type": "file"
+        }
+      ],
+      "window": {
+        "width": 500,
+        "height": 500
+      }
+    },
+    "win": {
+      "target": [
+        "nsis"
+      ],
+      "icon": "assets/icon.png",
+      "artifactName": "${productName}-${version}.${ext}",
+      "publisherName": "clydee"
+    },
+    "nsis": {
+      "allowToChangeInstallationDirectory": true,
+      "oneClick": false,
+      "perMachine": false
+    }
   }
 }
